# MSM

./: .gitignore  Cargo.toml  README.md  SimObj.py  dataInterp.py  env.sh  gravSolver.py  planeWave1d.npz  sim.py  test.sh  testGrav.py
common/: Cargo.toml
common/src/: constants.rs  error.rs  ics.rs  lib.rs  parameters.rs
examples/: gaussian-overdensity-mft.toml  repro.toml  spherical-tophat-cosmo.toml  spherical-tophat.toml
initial_conditions/: planeWave3d_e10_sym.npz
msm-data-interpreter/: Cargo.toml  di.py  gen_sbatch.py  plotqs.py  submit.sh
msm-data-interpreter/examples/: analyze_bose_star.rs  analyze_streams.rs
msm-data-interpreter/src/: balancer.rs  lib.rs  main.rs
python/: SimObj.py  Sim_object.py  Tkachev.py  dataInterp.py  dataInterpDim.py  di_3D_movie.py  grav3D.py  grav3D_single.py  gravSolver.py  testGrav.py  utils.py  utilsDark.py
python_current/: SP3D_object.py  testGravDimensionless.py
python_deprecated/: IC3D.py  SP3D_object.py  classFieldObj.py  di_3D_snap.py  di_multiPsi.py  dimensionless3d.py  grav3D.py  gravSolver.py  testSinWaveCollapse.py
rust/: .gitignore  Cargo.toml  build.rs  check_var.py  env.sh  gen_run_script.py  plot.py  plotDensities.py  run_streams.sh
rust/examples/: bose-star.toml  bose_star.rs  bose_star_streams.rs  collapse256.rs  collapse256_poisson.rs  collapse512.rs  gaussian-overdensity-256-mft-cosmo.toml  gaussian-overdensity-512-mft.toml  gaussian-overdensity-mft.toml  mft_test.rs  spherical-tophat-cosmo.toml  spherical-tophat.toml  test.toml
rust/old_examples/: bose_star_streams.rs  fft.rs  normals.rs
rust/src/: collapse256.rs  config.rs  constants.rs  expanding.rs  ics.rs  lib.rs  main.rs  simulation.rs  simulation_object.rs  utils.rs  utils_old
rust/src/utils/: complex.rs  error.rs  fft.rs  grid.rs  io.rs  mod.rs
rust/tests/: fft.rs  fft2D.rs  io.rs  noise.rs  parallel_ndarray.rs  parallel_rustfft.rs
simulator/: Cargo.toml  arrays.npz  build.rs  check_var.py  data.npz  plot.py  plotDensities.py
simulator/src/: expanding.rs  ics.rs  lib.rs  main.rs  simulation_object.rs
simulator/src/utils/: error.rs  grid.rs  io.rs  mod.rs
simulator/tests/: fft.rs  io.rs  noise.rs
synthesizer/: Cargo.toml  gaussian_overdensity.py  gen_sbatch.py  plotqs.py
synthesizer/src/: balancer.rs  balancer_nompi.rs  lib.rs  main.rs
tomls/: planeWave3d_e10_sym-mft.toml  planeWave3d_e10_sym.toml
