[package]
name = "msm-data-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
anyhow = "1.0"
ndrustfft = "0.3.0"
glob = "0.3.0"
clap = { version = "3.1.12", features = ["derive"] }
dashmap = "5.3.4"
lazy_static = "1.4.0"
mpi = { version = "0.6.0", path = "../../rustMPItest/", features=["derive"] }
