[package]
name = "msm"
version = "0.1.0"
edition = "2021"

[features]
default = ["remote-storage", "expanding"]
c64 = [] # only for testing
remote-storage = ["shadow-drive-sdk", "solana-sdk", "serde_json", "arrayfire/afserde", "bincode", "num/serde"]
expanding = ["cosmology"]
fake_expanding_solver = ["expanding"]

[profile.release]
debug-assertions = true
lto = true
codegen-units = 1

[dependencies]
conv = "0.3.3"
approx = "0.5.1"
arrayfire = "=3.8.0"
clap = { version = "3.1.6", features = ["derive"] }
num = "0.2.1"
num-derive = "0.2.1"
npy = "0.4"
npy-derive = "0.4"
ndarray = "0.15.4"
ndarray-npy = "0.8.1"
indicatif = "0.16.2"
thiserror = "1.0.30"
anyhow = "1.0"
rand = { version = "0.8.5", features = ["small_rng"]}
rand_distr = "0.4.3"
num-traits = "0.2.14"
toml = "0.5.9"
serde = "1.0.98"
serde_derive = "1.0.98"
futures = "0.3.21"
cosmology = { version = "0.2.0", optional = true }
log = "0.4.17"
env_logger = "0.9.1"
tokio = { version = "1.14.1", features = ["rt", "macros"] }

[dependencies.shadow-drive-sdk]
version = "0.5.0"
optional = true

[dependencies.solana-sdk]
version = "1.10.34"
optional = true

[dependencies.serde_json]
version = "1.0.91"
optional = true

[dependencies.bincode]
version = "1.3.3"
optional = true

[build-dependencies]
futures = "0.3.21"
tokio = { version = "1.14.1", features = ["rt", "macros"] }


